2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Chainloading on coreboot support.

	* grub-core/Makefile.core.def (chain): Add coreboot.
	* grub-core/loader/i386/coreboot/chainloader.c: New file.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/loader/i386/bsd.c (grub_bsd_load): Handle relocator failure
	if it happens.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Implement time command.

	* grub-core/Makefile.core.def (time): New module.
	* grub-core/commands/time.c: New file.
	* grub-core/script/parser.y: Remove "time" keyword.
	* grub-core/script/yylex.l: Likewise.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/loader.h (grub_loader_unregister_preboot_hook): Export.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/lib/relocator.c (malloc_in_range): Fix a memory corruption
	when handling leftovers.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/ieee1275/grub-ofpathname.c (main): Handle --help and --version
	so that help2man doesn't fail.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/net/drivers/ieee1275/ofnet.c (send_card_buffer) Use right
	type in pointers on sparc64.
	(get_card_packet): Likewise.

2011-06-27  Colin Watson  <cjwatson@ubuntu.com>

	* grub-core/commands/videoinfo.c (hook): Indicate current video mode
	with `*'.
	(grub_cmd_videoinfo): Fetch current video mode.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/disk/scsi.c (grub_scsi_read): Limit SCSI reads to 32K
	because of underlying system restrictions.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	* util/grub-mkrescue.in: Rename "ata" to "pata" and add ahci when
	necessary.

2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>

	Coreboot video support.

	* grub-core/Makefile.core.def (vga): Extend to coreboot and multiboot.
	(vbe): Likewise.
	* grub-core/kern/i386/coreboot/startup.S: Include int.S.