@@ -1,5 +1,10 @@
 2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
 
+	* grub-core/disk/pata.c (grub_pata_initialize) [QEMU_MIPS]: Fix a
+	mismerge.
+
+2011-06-27  Vladimir Serbinenko  <phcoder@gmail.com>
+
 	Chainloading on coreboot support.
 
 	* grub-core/Makefile.core.def (chain): Add coreboot.
